force-app/main/default/objects/BAMLinkedEntity__c/BAMLinkedEntity__c.object-meta.xml
<CustomObject>
    <description>The rules linked to the Contact Application Role. These can be either an Organisation, a Billing Account, or a Group</description>
    <label>Merchant Portal Linked Billing Account</label>
    <nameField>
        <displayFormat>LEN-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Portal Linked Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>