force-app/main/default/objects/BAMLinkedEntity__c/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing account associated with this Role</description>
    <inlineHelpText>Billing account associated with this Role</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipName>ContactApplicationRules</relationshipName>
    <type>Lookup</type>
</CustomField>