force-app/main/default/objects/BAMLinkedEntity__c/fields/ContactRole__c.field-meta.xml
<CustomField>
    <fullName>ContactRole__c</fullName>
    <description>The parent contact role this rule is linked to</description>
    <inlineHelpText>The parent contact role this rule is linked to</inlineHelpText>
    <label>Contact Role</label>
    <referenceTo>BAMContactRole__c</referenceTo>
    <relationshipName>LinkedEntities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>