force-app/main/default/objects/BAMLinkedEntity__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group associated with this Role</description>
    <inlineHelpText>Group associated with this Role</inlineHelpText>
    <label>Group</label>
    <referenceTo>BAMGroup__c</referenceTo>
    <relationshipName>ContactApplicationRules</relationshipName>
    <type>Lookup</type>
</CustomField>