force-app/main/default/objects/BAMLinkedEntity__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organisation associated with this Role</description>
    <inlineHelpText>Organisation associated with this Role</inlineHelpText>
    <label>(DEPRECATED) Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ContactApplicationRules</relationshipName>
    <type>Lookup</type>
</CustomField>