force-app/main/default/objects/BAMLinkedEntity__c/validationRules/BAMLinkedEntityBillingAccountValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BAMLinkedEntityBillingAccountValidation</fullName>
    <active>true</active>
    <description>Rule validates Billing Accounts to ensure they can be populated based on the config in Application Role record.</description>
    <errorConditionFormula>!ISBLANK(BillingAccount__c) &amp;&amp; !ContactRole__r.ApplicationRole__r.ShowBillingAccount__c</errorConditionFormula>
    <errorDisplayField>BillingAccount__c</errorDisplayField>
    <errorMessage>A Billing Account can not be assigned to the current role.</errorMessage>
</ValidationRule>