force-app/main/default/objects/BAMLinkedEntity__c/validationRules/BAMLinkedEntityOrganisationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BAMLinkedEntityOrganisationValidation</fullName>
    <active>true</active>
    <description>Rule validates Organisation to ensure they can be populated based on the config in Application Role record.</description>
    <errorConditionFormula>!ISBLANK(Organisation__c) &amp;&amp; ! ContactRole__r.ApplicationRole__r.ShowOrganisation__c</errorConditionFormula>
    <errorDisplayField>Organisation__c</errorDisplayField>
    <errorMessage>An Organisation can not be assigned to the current role.</errorMessage>
</ValidationRule>