force-app/main/default/objects/BAMLinkedEntity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContactRole__c</columns>
    <columns>BillingAccount__c</columns>
    <columns>Group__c</columns>
    <columns>Organisation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>